# fermentadorFulvio

calibracion_pH/calibracion_pH/: calibracion_pH.ino
configHora/horaConfig/: horaConfig.ino
espExterior/espExteriorMK1/: CMakeLists.txt  Doxyfile
espExterior/espExteriorMK1/html/: annotated.html  annotated_dup.js  classes.html  common_8h.html  common_8h.js  common_8h_source.html  dht11_8c.html  dht11_8c.js  dht11_8h.html  dht11_8h.js  dht11_8h_source.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5c982d53a68cdbcd421152b4020263a9.js  dir_76dd8867a16d204aa2db31affc56d971.html  dir_76dd8867a16d204aa2db31affc56d971.js  dir_bad007344d42f4b5340fab5412b591e5.html  dir_bad007344d42f4b5340fab5412b591e5.js  dir_c7dbbf444002e20cf9fc37bab89de1dc.html  dir_c7dbbf444002e20cf9fc37bab89de1dc.js  dir_ce9acbebd20a964a9fb527ea0a00b86e.html  dir_ce9acbebd20a964a9fb527ea0a00b86e.js  dir_eefee35c6ab380d7209ec05948f73f5c.html  doxygen_crawl.html  ds3231_8c.html  ds3231_8c.js  ds3231_8h.html  ds3231_8h.js  ds3231_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  lcd__parallel_8c.html  lcd__parallel_8c.js  lcd__parallel_8h.html  lcd__parallel_8h.js  (+41 more)
espExterior/espExteriorMK1/latex/: annotated.tex  common_8h.tex  common_8h_source.tex  dht11_8c.tex  dht11_8h.tex  dht11_8h_source.tex  dir_5c982d53a68cdbcd421152b4020263a9.tex  dir_76dd8867a16d204aa2db31affc56d971.tex  dir_bad007344d42f4b5340fab5412b591e5.tex  dir_c7dbbf444002e20cf9fc37bab89de1dc.tex  dir_ce9acbebd20a964a9fb527ea0a00b86e.tex  dir_eefee35c6ab380d7209ec05948f73f5c.tex  dirs.tex  ds3231_8c.tex  ds3231_8h.tex  ds3231_8h_source.tex  files.tex  lcd__parallel_8c.tex  lcd__parallel_8h.tex  main_8c.tex  refman.aux  (+24 more)
espExterior/espExteriorMK1/main/: CMakeLists.txt  main.c
espExterior/espExteriorMK1/main/drivers/: dht11.c  dht11.h  ds3231.c  ds3231.h  lcd_parallel.c  lcd_parallel.h  sd_card.c  sd_card.h
espExterior/espExteriorMK1/main/include/: common.h  queues.h
espExterior/espExteriorMK1/main/mqtt/: mqtt_manager.c  mqtt_manager.h
espExterior/espExteriorMK1/main/tasks/: task_display.c  task_input.c  task_logger.c  task_mqtt.c  task_sensores.c
espExterior/espExteriorMK1/main/wifi/: wifi_manager.c  wifi_manager.h
espInterior/espInterior/: CMakeLists.txt  Doxyfile
espInterior/espInterior/main/: CMakeLists.txt  main.c
espInterior/espInterior/main/drivers/: ds18b20.c  ds18b20.h  font5x7.h  mq135.c  mq135.h  oled_display.c  oled_display.h  ph_sensor.c  ph_sensor.h  rtc_ds3231.c  rtc_ds3231.h  sd_card.c  sd_card.h  servo.c  servo.h  voltage_sensor.c  voltage_sensor.h
espInterior/espInterior/main/hal/: adc_manager.c  adc_manager.h  i2c_manager.c  i2c_manager.h
espInterior/espInterior/main/mqtt/: mqtt_manager.c  mqtt_manager.h
espInterior/espInterior/main/tasks/: task_actuadores.c  task_actuadores.h  task_control.c  task_control.h  task_display.c  task_display.h  task_energia.c  task_energia.h  task_logger.c  task_logger.h  task_mqtt.c  task_mqtt.h  task_sensores.c  task_sensores.h
espInterior/espInterior/main/utils/: data_types.h  queues.c  queues.h
espInterior/espInterior/main/wifi/: wifi_manager.c  wifi_manager.h
mq135/mq135Solo/: mq135Solo.ino
output memorias/output_mem_ext/: LOG.TXT
output memorias/output_mem_int/: LOG.CSV
(+413 files in other folders)
